# mbox-extractor

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
mbox_extractor/: __init__.py  core.py
