[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbox-extractor"
version = "0.1.8"
description = "📬 Recursively extract all attachments from .mbox email archives with a single command"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
]
dependencies = [
    "tqdm"
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/tsilva/mbox-extractor"
Repository = "https://github.com/tsilva/mbox-extractor"

[project.scripts]
mbox-extractor = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
